fixed header overlap in html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,12 +26,15 @@ div {
 .site-nav {
 	padding: 15px 0 15px 0;
 	margin: 0 20px 0 0;
+
 }
 #logo {
-	font-size: 45px;
-	line-height: 45px;
+	font-size: 50px;
+	line-height: 80px;
+	/*height: 80;*/
 	color: yellow;
 }
+
 /*aside*/
 .social-header {
 	color: orange;
